# PeakRDL-socgen

./: .gitignore  CHANGELOG  README.md  flake.nix  setup.py
examples/apb_subsystem/: CMakeLists.txt
examples/apb_subsystem/rdl/: apb_master.rdl  apb_subsystem.rdl  simple_apb_slave.rdl
examples/apb_subsystem/verilog/: apb_master.v  simple_apb_slave.v  tb.v
examples/apb_test/: CMakeLists.txt  apb_slave.rdl  apb_soc.rdl
examples/axi_test/: CMakeLists.txt  apb_master.rdl  apb_slave.rdl  apb_subsys.rdl  axi_master.rdl  axi_slave.rdl  axi_soc.rdl
examples/cmake/: iverilog.cmake  peakrdl_socgen.cmake  verilate.cmake  verilator.cmake
examples/cmake/verilator/: CMakeLists.txt
examples/nmi_apb_system/: CMakeLists.txt  addrmap.h  main.cpp
examples/nmi_apb_system/rdl/: apb_memory.rdl  apb_subsystem.rdl  nmi_memory.rdl  nmi_subsystem.rdl  nmi_system.rdl
examples/nmi_apb_system/scripts/: gen_mmap.cmake  gen_mmap.py
examples/nmi_apb_system/verilog/: apb_memory.v  nmi_memory.v
examples/nmi_subsystem/: CMakeLists.txt
examples/nmi_subsystem/rdl/: nmi_master.rdl  nmi_memory.rdl  nmi_subsystem.rdl  signals.rdl
examples/nmi_subsystem/verilog/: nmi_interconnect.v  nmi_master.v  nmi_memory.v
examples/picorvino/: CMakeLists.txt  nmi_interconnect.v  nmi_master.v  nmi_memory.v  nmi_subsystem.rdl  picorvino.rdl  rdl_types.rdl  tb.v
examples/picorvino/picorv32/: picorv32.rdl  picorv32.v
examples/picorvino/rdl/: nmi_memory.rdl
examples/picorvino/verilog/: nmi_memory.v
examples/picorvino/vrf/: main.cpp  picorvino_wrap.v
src/peakrdl_socgen/: __init__.py  __peakrdl__.py  adapter.py  bus.py  common.rdl  exporter.py  intc.py  intc_wrapper.py  intf.py  module.py  signal.py  subsystem.py
src/peakrdl_socgen/dot/: dot.j2
src/peakrdl_socgen/interconnects/apb/: __init__.py  apb2apb_tmr.v  apb_bus.rdl  apb_interconnect.rdl  apb_interconnect.v  apb_intf.rdl  apb_tmr2apb.v
src/peakrdl_socgen/interconnects/axi/: axi2axi_lite.v  axi2axilite.v  axi_addr.v  axi_interconnect.rdl  axi_interconnect.v  axi_intf.rdl  axi_lite2apb.v  old.v  sfifo.v  skidbuffer.v
src/peakrdl_socgen/interconnects/common/: fanout.v  majorityVoter.v
src/peakrdl_socgen/interconnects/lowrisc_if/: CMakeLists.txt  axi2lowrisc_if.rdl  lowrisc_if_interconnect.rdl  lowrisc_if_intf.rdl
src/peakrdl_socgen/interconnects/lowrisc_if/rtl/pulp_adapters/: CMakeLists.txt  axi2lowrisc_if.sv  lowrisc_if_interconnect.sv  pulp_fifo.sv
src/peakrdl_socgen/interconnects/nmi/: __init__.py  nmi2apb.v  nmi2nmi_tmr.v  nmi_bus.rdl  nmi_interconnect.rdl  nmi_interconnect.v  nmi_intf.rdl  nmi_tmr2nmi.v
src/peakrdl_socgen/interconnects/pulpif/: CMakeLists.txt  pulpif_adapt_to.rdl  pulpif_interconnect.rdl  pulpif_interconnect.sv  pulpif_intf.rdl
src/peakrdl_socgen/interconnects/pulpif/pulp_axi/: CMakeLists.txt  axi_pkg.sv  registers.svh  typedef.svh
src/peakrdl_socgen/interconnects/pulpif/pulpif2axi/: CMakeLists.txt  axi_from_mem.sv  axi_lite_from_mem.sv  axi_lite_to_axi.sv  fifo_v3.sv  pulpif2axi.sv  pulpif2axi_lite.sv
src/peakrdl_socgen/rdl/: common.rdl  interconnect_wrap.rdl
src/peakrdl_socgen/subsystem/: intc_wrap.j2  subsystem.j2  subsystem_bkp.j2
src/peakrdl_socgen/templates/: soc_addr_map_pkg.sv.j2  soc_diagram.dot.j2  subsystem.sv.j2
